// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid component should render Grid with Grid items 1`] = `
.c0 {
  position: relative;
}

.c3 {
  position: relative;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    display: inline-block;
    width: 75%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c1 {
    display: inline-block;
    width: 60%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

@supports (display:grid) {
  .c3 {
    display: grid;
    position: initial;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c5 {
    display: inline-block;
    width: NaN%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c5 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    display: inline-block;
    width: NaN%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    display: inline-block;
    width: 62.5%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c6 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c6 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <p
      class="c2"
    >
      1
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      <p
        class="c2"
      >
        Landscape image 
        This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
      </p>
    </div>
    <div
      class="c5"
    >
      <p
        class="c2"
      >
        Landscape image's caption 
        This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
      </p>
    </div>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      Paragraph 
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      2
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      3
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      4
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      5
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      6
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      7
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      8
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      9
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c6"
  >
    <p
      class="c2"
    >
      10
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
</div>
`;

exports[`Grid component should render Grid with Grid items including nested non-Grid Figure element 1`] = `
.c0 {
  position: relative;
}

.c4 {
  position: relative;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c3 {
  margin: 0;
  padding: 0;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c1 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    display: inline-block;
    width: 75%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c1 {
    display: inline-block;
    width: 60%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c1 {
    display: block;
  }
}

@supports (display:grid) {
  .c4 {
    display: grid;
    position: initial;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c5 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c5 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c5 {
    display: inline-block;
    width: 100%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c5 {
    display: block;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c6 {
    display: inline-block;
    width: NaN%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c6 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c6 {
    display: block;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c7 {
    display: inline-block;
    width: NaN%;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c7 {
    display: inline-block;
    width: 83.33333333333333%;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c7 {
    display: inline-block;
    width: 62.5%;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c7 {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c7 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <p
      class="c2"
    >
      1
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <figure
    class="c3"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <p
          class="c2"
        >
          Landscape image 
          This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
        </p>
      </div>
      <div
        class="c6"
      >
        <p
          class="c2"
        >
          Landscape image's caption 
          This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
        </p>
      </div>
    </div>
  </figure>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      Paragraph 
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      2
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      3
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      4
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      5
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      6
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      7
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      8
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      9
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
  <div
    class="c7"
  >
    <p
      class="c2"
    >
      10
      This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines. This is a long paragraph that will wrap for several lines.
    </p>
  </div>
</div>
`;
